<resources>
    <string name="app_name">Habit App</string>
    <string name="title_activity_bottom_nav">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_progress">Progress</string>
    <string name="title_challenge">Challenge</string>

    <string name="habitName">Habit Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Login/Register -->
    <string name="prompt_email">email</string>
    <string name="prompt_password">password</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="have_have_an_account">Have an account?</string>
    <string name="begin">Begin</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="have_an_account">Have an account?</string>

    <!-- Dates -->
    <string name="select_date">Select Date</string>
    <string name="no_date_selected">No date selected</string>
    <string name="start_date">Start Date:</string>
    <string name="dd_mm_yy">dd/mm/yy</string>
    <string name="dd">dd</string>
    <string name="mm">/mm/</string>
    <string name="yy">yy</string>
    <string name="end_date">End Date:</string>
    <string name="date">Date</string>


    <string name="notes">Notes</string>


</resources>