<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".ui.AddEditFragment"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/edit_text_habit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/habitName"
            android:inputType="text" />

        <CheckBox
            android:id="@+id/check_box_important"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Important!" />

        <TextView
            android:id="@+id/text_view_date_created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Date created:" />

        <LinearLayout
            android:id="@+id/linearLayout_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_habit_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/notes"
                android:inputType="text" />

        </LinearLayout>




        <LinearLayout
            android:id="@+id/linearLayout_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutFrequency">

            <TextView
                android:id="@+id/text_view_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/start_date" />

            <TextView
                android:id="@+id/text_view_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/date" />


            <Button
                android:id="@+id/button_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_date" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
            app:layout_constraintVertical_bias="0.02"
            tools:layout_editor_absoluteX="40dp">

            <TextView
                android:id="@+id/text_view_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/end_date" />

            <TextView
                android:id="@+id/text_view_end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/date" />


            <Button
                android:id="@+id/button_end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_date" />

        </LinearLayout>
    </LinearLayout>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_save_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"

        android:layout_marginBottom="?actionBarSize"
        android:src="@drawable/ic_baseline_check_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>